# OpenMPI_Examples

Cmake_Examples/: OpenMPI_Example  run.sh
Cmake_Examples/cmake-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  OpenMPI_Example  cmake_install.cmake
Make_Examples/: Makefile.broken
Noob_Examples/OpenMPI_NonBlocking/: .OpenMPI_Example.sh.swp  AData.h  AStructs.hpp  CMakeLists.txt  MpiMaster.cpp  MpiMaster.h  MpiSlave.cpp  MpiSlave.h  OpenMPI_Example.sh  main.cpp  main.mpi.cpp  main.mpi.h
Noob_Examples/OpenMPI_NonBlocking/cmake-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  OpenMPI_NonBlocking  cmake_install.cmake
Noob_Examples/TempCode/NN/: CMakeLists.txt  cuda_dummy.h  run_local.sh  run_remote.sh  run_remote_rm_exe.sh
Noob_Examples/TempCode/NN/hopfield/: hopfield.cu  hopfield.cuh  hopfield.test.cpp  hopfield1.cpp  hopfield2.cpp
Noob_Examples/TempCode/cpp/: ACalc.cpp  ACalc.h  AData.cpp  AData.h  CMakeLists (2).txt  test.cpp.cpp
Noob_Examples/TempCode/cpp/CppUtils/: CMakeLists.txt  debug_printing.h  std_utils (2).h  template_utils.h
Noob_Examples/TempCode/cpp/CppUtils/Containers/: std_utils.h  std_vector_2d.h
Noob_Examples/TempCode/cpp/CppUtils/Math/: math.cpp  math.h
Noob_Examples/TempCode/cuda/: ACalcCuda.cu  ACalcCuda.cuh  CMakeLists.txt  run_local (2).sh  run_local.sh  run_remote (2).sh  run_remote_rm_exe (2).sh  run_remote_rm_exe.sh  test.cuda.cpp
Noob_Examples/TempCode/cuda/CudaUtils/: CMakeLists.txt  run_remote.sh  test.cudautils.cpp
Noob_Examples/TempCode/cuda/CudaUtils/containers/: thrust_vector_2d.cu  thrust_vector_2d.cuh
Noob_Examples/TempCode/cuda_tutorial/: CMakeLists.txt  Makefile (2)  MyCudaTutorial  cuda_dummy.h  cuda_kernels.cuh  cuda_macros.h  cuda_mul_AV.cuh  cuda_reduce.cu  cuda_reduce.cuh  cuda_reduce_benchmark.cuh  cuda_tests.cuh  cuda_thrust_test.cuh.h  cuutils.h  gpu.txt  hopfield_deterministic.cuh  reduce.h  run_local.sh  run_local_rm_exe.sh  run_remote.sh  run_remote.sh___jb_tmp___  run_remote1.sh  run_remote_rm_exe.sh  std_utils.h  test.cuda_tutorial.cpp  test.cuda_tutorial.cu
Noob_Examples/TempCode/cuda_tutorial/moderngpu/: Makefile
Noob_Examples/TempCode/deep-learning/: CMakeLists.txt  cifar10_reader.hpp  run_local.sh  run_remote.sh  run_remote_rm_exe.sh  test.deeplearning.cpp
Noob_Examples/TempCode/deep-learning/cifar/10/lkmtue/: .gitignore  BUILD  activation.h  average_pooling_layer.h  conv_layer.h  data.h  filler.h  fully_connected_layer.h  gradient_test.cc  gradient_test.sh  im2col.h  input_layer.h  layer.h  main.cc  max_pooling_layer.h  net.h  param.h  relu_layer.h  run.sh  softmax_loss_layer.h  util.h
Noob_Examples/TempCode/mpi/: MpiMaster.cpp  MpiMaster.h  MpiSlave.cpp  MpiSlave.h  main.mpi.cpp  main.mpi.h
